# state_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
.github/workflows/: unit-tests.yml
esp32/main/: CMakeLists.txt  esp32.c
examples/: Makefile  fsm_example  fsm_example.c  state_example  state_example.c
experiments/: fsm_xmacro.c
src/: assert_bp.h  emitter_base.c  emitter_base.h  event_observer.c  event_observer.h  events.c  events.h  fifo.h  fifo_base.c  fifo_base.h  fsm.c  fsm.h  heap_base.c  heap_base.h  state.c  state.h  state_history.c  state_history.h
tests/: emitter_tests.c  emitter_tests.h  event_observer_tests.c  event_observer_tests.h  fifo_tests.c  fifo_tests.h  heap_tests.c  heap_tests.h  multi_state_tests.c  multi_state_tests.h  state_tests.c  tests.c
unit_tests/: Makefile  fifo_tests.c  fifo_tests.h  state_tests.c  state_tests.h  tests.c
xmacro/: Makefile  fsm_xmacro  fsm_xmacro.c
